manifests/staging/module-domain-service-staging.yml
apiVersion: v1
kind: Service
metadata:
  name: module-domain-service
  namespace: staging
spec:
  ports:
    - port: 80
  selector:
    app: module-domain-service
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: module-domain-service
  namespace: staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: module-domain-service
    spec:
      containers:
        - env:
            - name: BROKER_CONNECTION_STRING
              valueFrom:
                secretKeyRef:
                  name: module-domain-service-secret
                  key: url
            - name: BROKER_EXCHANGE_NAME
              valueFrom:
                secretKeyRef:
                  name: module-domain-service-secret
                  key: exchange
            - name: DB_CONNECTION_STRING
              valueFrom:
                secretKeyRef:
                  name: module-domain-service-secret
                  key: connectionString
            - name: BROKER_QUEUE_NAME
              valueFrom:
                secretKeyRef:
                  name: module-domain-service-secret
                  key: queue
            - name: LOG_LEVEL
              valueFrom:
                secretKeyRef:
                  name: module-domain-service-secret
                  key: loglevel
          name: module-domain-service
          image: hsleidenmdlo.azurecr.io/module-domain-service
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 50Mi
